# rankings

./: .gitignore  .pylintrc  Dockerfile  FEATURE-DISCOVERY-2026-03-12.md  FEATURE-DISCOVERY-2026-03.md  GITHUB-AUTH-FIX.md  INCIDENT-NCAA-WORKAROUND.md  MAINTENANCE-2026.md  PARQUET-SCHEMA.md  PRODUCT-BACKLOG.md  PRODUCT-IDEAS.md  Pipfile  README.md  feature-discovery-2026-03-29.md  feature-discovery-top5.md  main.py  readme.md  test_playwright_ncaa.py
backend/: .dockerignore  .gitignore  .pylintrc  Dockerfile  Pipfile  deploy.sh  main.py  pyproject.toml  run.sh  sync.sh
backend/infra/environments/dev/: main.tf  outputs.tf
backend/infra/environments/prod/: main.tf
backend/infra/modules/task/: main.tf  outputs.tf  (+1 more)
backend/lib/all/: all.py  cli.py
backend/lib/export/: cli.py  export_parquet.py
backend/lib/games/: cli.py  games.py
backend/lib/predict/: cli.py  predict.py  test_predict.py
backend/lib/render/: cli.py
backend/lib/scrape/: SESSION_ARCHITECTURE.md  akamai_bypass.py  cli.py  curl_cffi_session.py  interstitial_bypass.py  mcla.py  mcla2.py  ncaa.py  ncaa_dot_com.py  playwright_fetcher.py  scrape.py  tables.py  test_interstitial_bypass.py  test_mcla.py  test_mcla2.py  test_ncaa.py  test_ncaa_dot_com.py  test_ncaa_dot_com_live.py  test_playwright_fetcher.py  types.py
backend/lib/shared/: shared.py  types.py
backend/lib/sync/: cli.py  sync.py
backend/lib/testing/: __init__.py
backend/scripts/: backtest_baseline.py  benchmark_json_vs_parquet_s3.py  benchmark_parquet_duckdb.py  demo_maxpreps.py  verify-output-files.sh  verify-s3-sync.sh
(+213 files in other folders)
