[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.0",
    "dataclasses-json>=0.6.7",
    "numpy>=2.2.2",
    "pyarrow>=19.0.0",
    "python-dateutil>=2.9.0.post0",
    "requests-cache>=1.2.1",
    "requests-ratelimiter>=0.7.0",
    "ruff>=0.9.4",
    "scipy>=1.15.1",
]
